revised Dataset description

--- a/web-scraping-pushshift_nlp_rylandmatthews.ipynb
+++ b/web-scraping-pushshift_nlp_rylandmatthews.ipynb
@@ -31,7 +31,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Dataset"
+    "## The Dataset\n",
+    "There aren't entirely analagous Liberal and Left subreddits, but I believe I chose two that illustrate the differences well. I knew early on that I wanted Pod Save America's r\\/FriendsoftheePod for the Liberal subreddit, because it's bit more than *just* a podcast. Made up of former Obama comms department staffers, Pod Save America is the flagiship podcast  of Crooked Media, practically a clearing house for the establishment of the Democratic Party and a seeminly essential waypoint for both veteran and up-and-coming Liberal political figures. But, there's not really a leftwing media property equivalent. Even if Reddit hadn't axed r\\/ChapoTrapHouse last year, they're just wholly different in both scope and fuction; one can land interviews with Barrack Obama or Joe Biden, the other's big gets are Adam McKay and Marianne Williamson. It's really kind of difficult to imagine what a Left-wing Pod Save America would even *be*, so instead I chose r\\/IWW, the Industrial Workers of the World subreddit for the Left alternative. Pod Save America makes sense in the way that Liberals are often highly concerned with being well represented by those in power, while the IWW makes sense as Leftists are concered with building a base of politcial power. Difficult as I think it is to imagine a Lefty-Pod Save America, I can imagine that a Liberal-IWW would come to resemble Pod Save America more and more over time in its functions and goals "
    ]
   },
   {
@@ -1579,12 +1580,7 @@
     }
    ],
    "source": [
-    "preds = vc_gridsearch.predict(X_test)\n",
-    "print(\"Train Score:\", vc_gridsearch.score(X_train, y_train))\n",
-    "print(\"Test Score:\", vc_gridsearch.score(X_test, y_test))\n",
-    "print()\n",
-    "rmse = mean_squared_error(y_test, preds, squared=False)\n",
-    "print('Accuracy: ', accuracy_score(y_test, preds))\n",
+    "x\n",
     "print('Precision:', precision_score(y_test, preds))\n",
     "print('Recall:   ', recall_score(y_test, preds))\n",
     "print('F1:   ', f1_score(y_test, preds))"
